# falachefe_plataforma

./: .gitignore  ACAO-URGENTE-ERRO-500.md  ANALISE-ESTRUTURA-USUARIOS.md  ANALISE-PROJETO-CHAT-WEB.md  ARQUITETURA-DOMINIOS.md  ATUALIZACAO-DOMINIO-API.md  ATUALIZACAO-LEO-FINANCEIRO.md  ATUALIZACAO-LIA-HR.md  BUG-CLASSIFICADOR-SALDO.md  BUGFIX-MESSAGEROUTER-ROUTE-METHOD.md  CHECKLIST-PRODUCAO-FALACHEFE.md  CLASSIFICADOR-LLM-ROUTING.md  CLEANUP-FINAL-REPORT.md  COMANDO-FINAL-DEPLOY.md  COMO-TESTAR-WEBHOOK-WHATSAPP.md  CONFIGURACAO-MEMORIA-AGENTES-COMPLETA.md  CONTEXTO-REAL-USUARIOS.md  CORRECAO-ANA-PERSONALIZACAO.md  CORRECAO-ARQUITETURA-DOMINIOS-RESUMO.md  CORRECAO-AUTH-LOGIN.md  CORRECAO-CHAT-WEB-ERRO-500.md  CORRECAO-CHAT-WEB-HETZNER.md  CORRECAO-CONTEXT-SOURCE-DINAMICO.md  CORRECAO-ERRO-LOGIN.md  CORRECAO-REDIS-QUEUE-SUCCESS.md  CORRECAO-REDIS-UPSTASH.md  CORRECAO-SCHEMA-MEMORIA.md  CORRECAO-WEBHOOK-DUPLICADO.md  DECISAO-TABELAS-MEMORIA.md  DEPLOY-COMPLETO-STATUS-FINAL.md  DEPLOY-FINAL-MEMORIA-COMPLETO.md  DEPLOY-FINAL-TOOLS.md  DEPLOY-HETZNER-SUCCESS.md  DEPLOY-MEMORIA-ORCHESTRATOR-SUCCESS.md  DEPLOY-PERFEITO-COMPLETO.md  DEPLOY-SERVIDOR-HETZNER.sh  DEPLOY-TOOLS-FINANCEIRAS.md  DEPLOY-TRIO-ESPECIALISTAS-SUCCESS.md  DIAGNOSTICO-CREWAI-TIMEOUT.md  DIAGNOSTICO-INTEGRACAO-AGENTES.md  (+100 more)
crewai-projects/falachefe_crew/: .dockerignore  ARQUITETURA-FINAL.md  ARQUITETURA-HIERARQUICA-COMPLETA.md  DEPLOY-HETZNER.md  DEPLOY-RAILWAY.md  DIAGRAMAS-VISUAIS.md  Dockerfile  INDICE-DOCUMENTACAO.md  LGPD-COMPLIANCE.md  Procfile  (+45 more)
latest-ai-development/: pyproject.toml  test_crewai.py
(+574 files in other folders)
