[project]
name = "falachefe_crew"
version = "0.1.0"
description = "falachefe-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
falachefe_crew = "falachefe_crew.main:run"
run_crew = "falachefe_crew.main:run"
train = "falachefe_crew.main:train"
replay = "falachefe_crew.main:replay"
test = "falachefe_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
